--- a/aubnig.conf
+++ b/aubnig.conf
@@ -1,3 +1,7 @@
+[AubNigSet]
+
+RunMode = dev
+
 [GitSet]
 
 GitTempURL = https://github.com/MDL-Sinlov/MDL_Android-Temp.git
@@ -6,3 +10,4 @@ GitTag = ""
 [KeySet]
 
 base_key = 7f8f0f32be3fbde8b4ea95df694ddc68
+
